WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123309
REGRESSION(
r157950
): It made many tests assert on Windows, EFL, GTK
https://bugs.webkit.org/show_bug.cgi?id=123309
Summary
REGRESSION(r157950): It made many tests assert on Windows, EFL, GTK
Roger Fong
Reported
2013-10-24 18:37:18 PDT
Stepping in the issue, there is an assertion failure: ASSERT(run.charactersLength() >= run.length()); The line before is run.setCharactersLength(text.textLength() - from); However, stepping into this line results in stepping into DocumentMarker::setStartOffset instead.
Attachments
disable simple line layout on non-mac platforms
(1.32 KB, patch)
2013-10-25 06:36 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Roger Fong
Comment 1
2013-10-24 18:38:07 PDT
Started from
https://bugs.webkit.org/show_bug.cgi?id=122458
Csaba Osztrogonác
Comment 2
2013-10-25 03:38:06 PDT
and GTK and EFL too ... -
http://build.webkit.org/builders/GTK%20Linux%2064-bit%20Debug%20WK1/builds/4983
-
http://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK1/builds/2321
Antti Koivisto
Comment 3
2013-10-25 06:36:50 PDT
Created
attachment 215172
[details]
disable simple line layout on non-mac platforms
Andreas Kling
Comment 4
2013-10-25 06:38:31 PDT
Comment on
attachment 215172
[details]
disable simple line layout on non-mac platforms r=me :|
Antti Koivisto
Comment 5
2013-10-25 06:45:51 PDT
https://trac.webkit.org/r158007
Antti Koivisto
Comment 6
2013-10-25 06:46:40 PDT
Filed
bug 123338
for re-enabling.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug