REGRESSION(r157950): It made many tests assert on Windows, EFL, GTK https://bugs.webkit.org/show_bug.cgi?id=123309

Reviewed by Andreas Kling.

Disable simple line layout on non-Mac plaforms for now.

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::canUseFor):



Canonical link: https://commits.webkit.org/141433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158007 268f45cc-cd09-0410-ab3c-d52691b4dbfc